--- a/examples/explanatory_example.ipynb
+++ b/examples/explanatory_example.ipynb
@@ -1475,17 +1475,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Index.ravel returning ndarray is deprecated; in a future version this will return a view on self.\n",
-      "Index.ravel returning ndarray is deprecated; in a future version this will return a view on self.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1531,58 +1523,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2014-01-06</th>\n",
-       "      <td>FOODS_1</td>\n",
-       "      <td>FOODS</td>\n",
-       "      <td>FOODS_1_001</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA_1</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-01-13</th>\n",
-       "      <td>FOODS_1</td>\n",
-       "      <td>FOODS</td>\n",
-       "      <td>FOODS_1_001</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA_1</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>2014-01-07</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-01-20</th>\n",
-       "      <td>FOODS_1</td>\n",
-       "      <td>FOODS</td>\n",
-       "      <td>FOODS_1_001</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA_1</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>2014-01-08</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-01-27</th>\n",
-       "      <td>FOODS_1</td>\n",
-       "      <td>FOODS</td>\n",
-       "      <td>FOODS_1_001</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA_1</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>2014-01-09</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-02-03</th>\n",
-       "      <td>FOODS_1</td>\n",
-       "      <td>FOODS</td>\n",
-       "      <td>FOODS_1_001</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA_1</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>2014-01-10</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1596,95 +1588,95 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-10-12</th>\n",
-       "      <td>FOODS_1</td>\n",
-       "      <td>FOODS</td>\n",
-       "      <td>FOODS_1_003</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>TX_1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.661338e-16</td>\n",
+       "      <th>2016-06-16</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-10-19</th>\n",
-       "      <td>FOODS_1</td>\n",
-       "      <td>FOODS</td>\n",
-       "      <td>FOODS_1_003</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>TX_1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.661338e-16</td>\n",
+       "      <th>2016-06-17</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-10-26</th>\n",
-       "      <td>FOODS_1</td>\n",
-       "      <td>FOODS</td>\n",
-       "      <td>FOODS_1_003</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>TX_1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.661338e-16</td>\n",
+       "      <th>2016-06-18</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-11-02</th>\n",
-       "      <td>FOODS_1</td>\n",
-       "      <td>FOODS</td>\n",
-       "      <td>FOODS_1_003</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>TX_1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.661338e-16</td>\n",
+       "      <th>2016-06-19</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-11-09</th>\n",
-       "      <td>FOODS_1</td>\n",
-       "      <td>FOODS</td>\n",
-       "      <td>FOODS_1_003</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>TX_1</td>\n",
-       "      <td>0.693147</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.661338e-16</td>\n",
+       "      <th>2016-06-20</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 8 columns</p>\n",
+       "<p>7176 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            dept_id cat_id      item_id state_id store_id     sales  \\\n",
-       "datetime                                                              \n",
-       "2014-01-06  FOODS_1  FOODS  FOODS_1_001       CA     CA_1  0.000000   \n",
-       "2014-01-13  FOODS_1  FOODS  FOODS_1_001       CA     CA_1  0.000000   \n",
-       "2014-01-20  FOODS_1  FOODS  FOODS_1_001       CA     CA_1  0.000000   \n",
-       "2014-01-27  FOODS_1  FOODS  FOODS_1_001       CA     CA_1  0.000000   \n",
-       "2014-02-03  FOODS_1  FOODS  FOODS_1_001       CA     CA_1  0.000000   \n",
-       "...             ...    ...          ...      ...      ...       ...   \n",
-       "2015-10-12  FOODS_1  FOODS  FOODS_1_003       TX     TX_1  0.000000   \n",
-       "2015-10-19  FOODS_1  FOODS  FOODS_1_003       TX     TX_1  0.000000   \n",
-       "2015-10-26  FOODS_1  FOODS  FOODS_1_003       TX     TX_1  0.000000   \n",
-       "2015-11-02  FOODS_1  FOODS  FOODS_1_003       TX     TX_1  0.000000   \n",
-       "2015-11-09  FOODS_1  FOODS  FOODS_1_003       TX     TX_1  0.693147   \n",
+       "            dept_id  cat_id  item_id  state_id  store_id  sales  \\\n",
+       "datetime                                                          \n",
+       "2014-01-06        0       0        0         0         0    0.0   \n",
+       "2014-01-07        0       0        0         0         0    0.0   \n",
+       "2014-01-08        0       0        0         0         0    0.0   \n",
+       "2014-01-09        0       0        0         0         0    0.0   \n",
+       "2014-01-10        0       0        0         0         0    0.0   \n",
+       "...             ...     ...      ...       ...       ...    ...   \n",
+       "2016-06-16        0       0        2         1         1    NaN   \n",
+       "2016-06-17        0       0        2         1         1    NaN   \n",
+       "2016-06-18        0       0        2         1         1    NaN   \n",
+       "2016-06-19        0       0        2         1         1    NaN   \n",
+       "2016-06-20        0       0        2         1         1    NaN   \n",
        "\n",
        "            sales_mean_roll7_lag1  sales_mean_roll14_lag1  \n",
        "datetime                                                   \n",
        "2014-01-06                    NaN                     NaN  \n",
-       "2014-01-13                    0.0            0.000000e+00  \n",
-       "2014-01-20                    0.0            0.000000e+00  \n",
-       "2014-01-27                    0.0            0.000000e+00  \n",
-       "2014-02-03                    0.0            0.000000e+00  \n",
+       "2014-01-07                    0.0                     0.0  \n",
+       "2014-01-08                    0.0                     0.0  \n",
+       "2014-01-09                    0.0                     0.0  \n",
+       "2014-01-10                    0.0                     0.0  \n",
        "...                           ...                     ...  \n",
-       "2015-10-12                    0.0            6.661338e-16  \n",
-       "2015-10-19                    0.0            6.661338e-16  \n",
-       "2015-10-26                    0.0            6.661338e-16  \n",
-       "2015-11-02                    0.0            6.661338e-16  \n",
-       "2015-11-09                    0.0            6.661338e-16  \n",
+       "2016-06-16                    NaN                     NaN  \n",
+       "2016-06-17                    NaN                     NaN  \n",
+       "2016-06-18                    NaN                     NaN  \n",
+       "2016-06-19                    NaN                     NaN  \n",
+       "2016-06-20                    NaN                     NaN  \n",
        "\n",
-       "[1000 rows x 8 columns]"
+       "[7176 rows x 8 columns]"
       ]
      },
      "metadata": {},
